# IMEX_LavaFlow

./: AUTHORS  Makefile.in  README.md  configure  configure.ac
EXAMPLE/EXAMPLE_DEM_FOR_STUDENTS/: IMEX_LavaFlow.inp
src/: IMEX_LavaFlow.f90  Makefile.am  Makefile.in  constitutive_2d.f90  geometry_2d.f90  init_2d.f90  inpout_2d.f90  parameters_2d.f90  solver_2d.f90
